# advent_of_code_2023

./: BenchStats.hpp  CMakeLists.txt  Day.hpp  README.md  main.cpp  template.cpp
_template/: placeholders.hpp  template.cpp
day_02/: day_2.hpp
day_03/: day_3.hpp
day_05/: day_5.hpp
day_06/: day_6.hpp
day_07/: day_7.hpp
day_1/: day_1.cpp  day_1.hpp
day_10/: day_10.hpp
day_11/: day_11.hpp
day_12/: day_12.hpp
day_13/: day13.txt  day_13.hpp
day_14/: day14.txt  day_14.hpp
day_15/: day_15.hpp
day_16/: day_16.hpp
day_17/: day_17.hpp
day_18/: day18.txt  day_18.hpp
day_19/: day_19.hpp
day_2/: day_2.hpp  original_solution_day_2.cpp
day_20/: day_20.hpp
day_21/: day_21.hpp  notes.txt
day_22/: day_22.hpp
day_23/: day_23.hpp
day_24/: day_24.hpp
day_25/: day_25.hpp
day_3/: day_3.cpp  day_3.hpp  original_solution_day_3.cpp
day_4/: day_4.cpp  day_4.hpp  day_4_better.cpp  day_4_templated.hpp
day_5/: day_5.cpp  day_5.hpp
day_6/: day_6.hpp
day_7/: day_7.hpp
day_8/: day_8.hpp
day_9/: day9.hpp  day_9.hpp
util/: BenchStats.hpp  Day.hpp  macros.hpp
